Tue Jan 16 14:25:03 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed references to SIGCLD to SIGCHLD as it's more portable.

Tue Jan 16 14:02:34 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Added check for whether -ldl is necessary.

Tue Jan 16 11:51:25 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Added compatibility bits for early libxml1 versions.

Mon Jan 15 18:18:01 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed use of hstrerror, which isn't portable.

Mon Jan 15 18:02:42 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix assertion which was the wrong way round in multimatch.cc

Mon Jan 15 17:46:13 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix initialisation of Btree_base::sequential when creating database.

Mon Jan 15 15:43:46 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Renamed some uses of XML node structure for libxml2 compatibility.

Mon Jan 15 15:35:50 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add some fixes to sequential access to btrees from Martin.

Mon Jan 15 12:23:02 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Set matches_* to the known value of the number of hits if we have
	  been unable to return as many hits as were requested, and therefore
	  know the exact number.

	* Update test_matches1() to check this works correctly.  Passes.

Fri Jan 12 17:45:27 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement get_doclength() for QuartzDatabase

	* Remove unused parameter from QuartzRecordManager::add_record()

Fri Jan 12 17:14:16 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed MultiAllTermsList, which had stopped working.

Fri Jan 12 15:32:34 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add test to apitest (postlist6) that doclengths got from postlists
	  are the same as those from databases.  Fails for Quartz for the
	  moment.
